--- a/src/pages/portada/portada.scss
+++ b/src/pages/portada/portada.scss
@@ -1,3 +1,7 @@
 page-portada {
-
+    ion-content {
+        background-image: url("../assets/imgs/Zuraya-Editada.png");
+        background-size: cover;
+        background-position: center;
+      }
 }
