--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -38,7 +38,10 @@ $colors: (
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+  Purple:     #9b0f94c0,
+  Gold:       #d8ee14f8,
+  Invi:       #fafafa00
 );
 
 
@@ -70,7 +73,7 @@ $colors: (
 // so that the above variables are used and Ionic's
 // default are overridden.
 
-@import "ionic.theme.default";
+@import "ionic.theme.dark";
 
 
 // Ionicons
